# Thermostat_esp32s3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gmail_chain.txt  partitions.csv  project_tree.txt  rc.txt  sdkconfig.defaults
components/alert_manager/: CMakeLists.txt  Kconfig  Kconfig.alert  alert_manager.c  alert_storage.c  led_backend.c
components/alert_manager/include/: alert_manager.h  alert_storage.h  led_backend.h
components/app_context/: CMakeLists.txt  app_context.c
components/app_context/include/: app_context.h
components/config_app/: CMakeLists.txt  app_config.c
components/config_app/include/: app_config.h
components/config_runtime/: CMakeLists.txt  config_runtime.c
components/config_runtime/include/: config_runtime.h
components/config_storage/: CMakeLists.txt  Kconfig.storage  config_storage.c
components/config_storage/include/: config_storage.h
components/dht/: CMakeLists.txt  dht.c  dht_task.c
components/dht/include/: dht.h  dht_task.h
components/display_pages/: CMakeLists.txt  display_pages.c
components/display_pages/include/: display_pages.h
components/email_service/: CMakeLists.txt  Kconfig.email  email_service.c
components/essai/: CMakeLists.txt  essai.c
components/freebox_ftp/: CMakeLists.txt  Kconfig  Kconfig.ftp  freebox_core.cold  freebox_ftp.c  freebox_ftp.chold
components/freebox_report/: CMakeLists.txt  freebox_report.c
components/heating_program/: CMakeLists.txt  heating_program.c  test_heating_program.c
components/i2c_manager/: CMakeLists.txt  Kconfig.i2c  i2c_manager.c
components/jeedom/: CMakeLists.txt  Kconfig  Kconfig.jeedom  jeedom.c  jeedom_task.c
components/jeedom/include/: jeedom.h  jeedom_task.h
components/led_ctrl/: CMakeLists.txt  Kconfig  Kconfig.led  idf_component.yml  led_ctrl.c  led_db.c  led_driver.c  led_storage.c  led_task.c  led_types.c
components/led_ctrl/include/: led_ctrl.h  led_db.h  led_driver.h  led_storage.h  led_task.h  led_types.h
components/led_ctrl/include/test/: CMakeLists.txt  test_led_simulate.c
components/oled_service/: CMakeLists.txt  oled_service.c  u8g2_esp32_hal.c
components/predict_adjustment/: CMakeLists.txt  predict_adjustment.c
components/prediction_engine/: CMakeLists.txt  prediction_engine.c  saison_manager.c
components/rc_estimator/: CMakeLists.txt  rc_estimator.c
components/relay/: CMakeLists.txt  Kconfig.relay  relay.c  test_relay.c
components/relay/include/: relay.h  test_relay.h
components/sd_card/: CMakeLists.txt  Kconfig.sd  sd_card.c
components/serial_manager/: CMakeLists.txt  Kconfig  Kconfig.serial  serial_manager.c
components/sht31/: CMakeLists.txt  sht31.c  sht31_task.c
components/ssd1306/: CMakeLists.txt  font16x24.c  font3x5.c  font5x7.c  font8x16.c  ssd1306.c  ssd1306_font.c
components/task_manager/: CMakeLists.txt  Kconfig.task  task_manager.c
components/task_manager/include/: task_manager.h
components/tasks/: CMakeLists.txt  Kconfig.task
components/tasks/include/: itask.h  task_registry.h  tasks.h
components/tasks/manager/: tasks.c
components/tasks/registry/: task_registry.c
components/thermal_engine/: CMakeLists.txt  thermal_engine.c
components/thermal_model/: CMakeLists.txt  thermal_model.c
components/thermostat/: CMakeLists.txt  thermostat.c  thermostat_learning.c  thermostat_manager.c  thermostat_storage.c
components/thermostat/include/: thermostat.h  thermostat_learning.h  thermostat_storage.h
components/time_utils/: CMakeLists.txt  Kconfig.time  time_utils.c  time_utils_storage.c
components/u8g2/: CMakeLists.txt
components/weather/: CMakeLists.txt  weather.c  weather_task.c
components/weather_store/: CMakeLists.txt  weather_store.c
components/weather_utils/: CMakeLists.txt  weather_utils.c
components/web_server/: CMakeLists.txt  web_server.c  web_server_metrics.h  ws_api_alarms.c  ws_api_config.c  ws_api_freebox.c  ws_api_history.c  ws_api_i2c.c  ws_api_jeedom.c  ws_api_led.c  ws_api_logs.c  ws_api_ota.c  ws_api_prediction.c  ws_api_program.c  ws_api_relay.c  ws_api_sd.c  ws_api_sht31.c  ws_api_ssd1306.c  ws_api_sys.c  ws_api_task.c  ws_api_thermostat.c  ws_api_time.c  ws_api_u8g2.c  ws_api_weather.c  ws_api_weather.cold  ws_api_wifi.c  ws_logs.c  ws_registry.c  ws_static.c
components/web_server/include/: web_server.h  ws_api_alarms.h  ws_api_config.h  ws_api_freebox.h  ws_api_history.h  ws_api_i2c.h  ws_api_jeedom.h  ws_api_led.h  ws_api_logs.h  ws_api_ota.h  ws_api_prediction.h  ws_api_program.h  ws_api_relay.h  ws_api_sd.h  ws_api_sht31.h  ws_api_ssd1306.h  ws_api_sys.h  ws_api_task.h  ws_api_thermostat.h  ws_api_time.h  ws_api_u8g2.h  ws_api_weather.h  ws_api_wifi.h  ws_api_wifi.hold  ws_logs.h  ws_registry.h  ws_static.h
components/web_server/led/: cMakeLists.txt  led_service.c  ws_api_led.c
components/web_server/led/include/: led_service.h  ws_api_led.h
components/web_server/wifi/: Kconfig  wifi_service.c  ws_api_wifi.c
components/web_server/wifi/include/: wifi_service.h  ws_api_wifi.h
components/web_server/www/: alarms.html  common.css  config.html  config.js  config_jeedom.html  config_meteo.html  config_sht31.html  config_thermo.html  freebox.html  history.html  i2c.html  index.html  index.js  jeedom.html  led.html  logs.html  nav.html  ota.html  predictions.html  program.html  relay.html  sd.html  sht31.html  ssd1306.copy  ssd1306.html  sys.html  tasks.html  time.html  weather.html  wifi.html  à faire.txt
components/wifi/: CMakeLists.txt  Kconfig.wifi
components/wifi/include/: wifi_events.h  wifi_manager.h  wifi_mode.h  wifi_state_machine.h  wifi_storage.h
components/wifi/src/: wifi_app.c  wifi_events.c  wifi_manager.c  wifi_mode.c  wifi_state_machine.c  wifi_storage.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main_app.c  main_app.old  main_app_test.c  main_test.c  main_test_config.c  test_email.c  test_sd.c  test_storage.c
unity-app/: CMakeLists.txt  idf_component.yml  partitions.csv  sdkconfig.defaults
unity-app/main/: idf_component.yml
weather_test/: CMakeLists.txt  test_runner.c  test_weather_description.c
(+34 files in other folders)
