idf_component_register(
    SRCS
        "src/wifi_manager.c"
        "src/wifi_state_machine.c"
        "src/wifi_storage.c"
        "src/wifi_mode.c"
        "src/wifi_events.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_wifi
        esp_netif
        nvs_flash
        esp_event
        freertos
)
